<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">exam2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_playlists">Playlists</string>
    <string name="action_add">New playlist</string>
    <string name="title_activity_add_playlist">Add a playlist</string>
    <string name="action_settings">Settings</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="add">Add</string>
    <string name="edtName_hint">Playlist name</string>
    <string name="title_activity_details">Track details</string>
    <string name="title">Title</string>
    <string name="tvArtist">Artist</string>
    <string name="yera">Year</string>
    <string name="popularity">Popularity</string>
    <string name="delete">Delete</string>
    <string name="original_order">Original order</string>
    <string name="sort_pop">Sort by popularity</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="playlists">Playlists</string>
    <string name="all_tracks">All tracks</string>

</resources>
